[package]
name = "buscador_archivos_duplicados"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
csv = "1.2.2"
md5 = "0.7.0"
sqlite = "0.31.1"
walkdir = "2.3.3"
